# CC

./: CMakeLists.txt  README.md
common/: ErrorFileGenerator.hpp  Info.hpp  Token.hpp  Trie.hpp  Utils.hpp
lexer/: CMakeLists.txt
lexer/include/: Lexer.hpp  TokenRule.hpp  TokenRuleFactory.hpp
lexer/src/: Lexer.cpp  main.cpp
lexer/src/TokenRule/: IdentifierRule.cpp  KeywordRule.cpp  NumberRule.cpp  OperatorRule.cpp
parser/: CMakeLists.txt
parser/include/: ErrorRecoveryStrategy.hpp  ParserContext.hpp  SymbolObserver.hpp  SyntaxParser.hpp
parser/src/: ParserContext.cpp  SymbolObserver.cpp  SyncTokenStrategy.cpp  main.cpp
